--- a/JavaScript Calculator/src/index.scss
+++ b/JavaScript Calculator/src/index.scss
@@ -2,4 +2,5 @@ html{
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
     scroll-behavior: smooth;
+    background-color: #f7f7f7;
 }
